--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-
+      - name: lint
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
