--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,6 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --all-features
           use-cross: true
       - name: test
         uses: actions-rs/cargo@v1
@@ -22,6 +21,10 @@ jobs:
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+  audit:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: security-audit
         uses: actions-rs/audit-check@v1
         with:
