--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,12 +1,24 @@
-name: Security audit
 on:
   schedule:
     - cron: '0 0 * * *'
+name: Scheduled Security audit
 jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions-rs/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+on: [push]
+name: Security audit
+jobs:
+  build:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: security-audit
+        uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
