--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -14,7 +14,7 @@ jobs:
 on: [push]
 name: Security audit
 jobs:
-  build:
+  audit:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
