--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: security-audit
+      - name: run audit
         uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
