--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,11 @@
 name: Release
-on: [release]
+on:
+  release:
+    types: [published]
+on:
+  push:
+    tags:
+      - "v*.*.*"
 jobs:
   release:
     runs-on: macos-latest
