--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,17 +24,12 @@ jobs:
         with:
           files: crow.tar.gz
       - name: Update Homebrew formula
-        uses: dawidd6/action-homebrew-bump-formula@v3
+        uses: mislav/bump-homebrew-formula-action@v1
         with:
-          # Required, custom GitHub access token with the 'public_repo' and 'workflow' scopes
-          token: ${{secrets.CROW_TAP_TOKEN}}
-          # Optional, defaults to homebrew/core
-          tap: sandstorm/crow
-          # Formula name, required
-          formula: crow
-          # Optional, will be determined automatically
-          tag: ${{github.ref}}
-          # Optional, will be determined automatically
-          revision: ${{github.sha}}
-          # Optional, if don't want to check for already open PRs
-          force: false # true
+          # A PR will be sent to github.com/Homebrew/homebrew-core to update this formula:
+          formula-name: crow
+          formula-path: Formula/crow.rb
+          homebrew-tap: sandstorm/crow
+          base-branch: main
+        env:
+          COMMITTER_TOKEN: ${{ secrets.CROW_TAP_TOKEN }}
