--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           command: build
           use-cross: true
+      - name: cache
+        uses: Swatinem/rust-cache@v1
       - name: test
         uses: actions-rs/cargo@v1
         with:
