--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - name: cache
+        uses: Swatinem/rust-cache@v1
       - name: build
         uses: actions-rs/cargo@v1
         with:
